--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <main>
+        <!--Na section telefone, é carregado o iframe de nome,id tela, que traz a página home para ele.-->
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
+
         <section id="redes-sociais">
 
         </section>
