--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
-    <title>Projetos Redes Sociais</title>
+    <title>Projeto Redes Sociais</title>
 </head>
 <body>
     <main>
@@ -14,7 +14,14 @@
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
 
+        <!--Section redes sociais com os botões. Cada link contém uma imagem, que caso seja clicada, vai carregar o que estiver nela para o iframe do telefone-->
         <section id="redes-sociais">
+            <a href="#"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="#"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br>
+            <a href="#"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="#"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="#"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
 
         </section>
     </main>
